# pana-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: zola.sha256
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: accept_ai_edit_conflict_for_reconciliation.toml  acknowledge_ai_edit_quiescence.toml  acknowledge_canvas_projection_phase.toml  acknowledge_project_transition_decision_recovery_plan.toml  apply_component_mutation.toml  apply_data_mutation.toml  apply_file_buffer_changeset.toml  apply_motion_timeline_step_timing.toml  apply_native_block_contract.toml  apply_page_asset_contract.toml  apply_page_component_contract.toml  apply_theme_change.toml  apply_theme_style_draft.toml  apply_workbench_intent.toml  authorize_ai_reconciliation_recovery_reload.toml  cancel_publish_operation.toml  cancel_version_network_operation.toml  cleanup_page_css_contract.toml  clear_file_buffer_draft.toml  clear_page_js_draft.toml  clear_version_upstream.toml  close_project.toml  commit_versioning.toml  complete_ai_edit_reconciliation.toml  complete_ai_reconciliation_recovery_reload.toml  configure_codex_mcp.toml  configure_version_remote.toml  configure_version_upstream.toml  configure_versioning_identity.toml  create_design_class.toml  create_scss_variable.toml  create_site_archive_structure.toml  create_site_page_structure.toml  create_site_partial_structure.toml  create_site_single_structure.toml  create_version_branch.toml  delete_version_branch.toml  deploy_to_bunny.toml  download_google_font_family.toml  execute_preview_html_attributes_intent.toml  (+154 more)
src-tauri/resources/licenses/: ANIMEJS-MIT.txt  README.txt  THIRD_PARTY_LICENSES.txt
src-tauri/resources/project-template/: AGENTS.md  brief.md  readme.md  structura.md
src-tauri/src/: app_home.rs  lib.rs  main.rs  state.rs  tauri_command_registry.rs  zola_engine.rs  zola_links.rs  zola_theme.rs
src-tauri/src/blocks/: contract.rs  graph.rs  mod.rs  native.rs  options.rs  runtime.js  runtime.rs
src-tauri/src/commands/: ai_coordination.rs  app_home.rs  audit.rs  blocks.rs  command_center.rs  components.rs  config.rs  css.rs  data.rs  deploy.rs  design_system.rs  external_disk.rs  fonts.rs  js.rs  kernel.rs  kernel_preview_context.rs  kernel_preview_outcome.rs  kernel_preview_pipeline.rs  mcp.rs  mod.rs  mood.rs  page_assets.rs  page_components.rs  page_contracts.rs  preview.rs  project.rs  project_model.rs  source_graph.rs  templates.rs  themes.rs  versioning.rs  window.rs  workbench.rs  workspace_entries.rs
src-tauri/src/css/: mod.rs  page.rs  rules.rs  validation.rs  variables.rs  viewport.rs
src-tauri/src/deploy/: artifact.rs  bunny.rs  env.rs  mod.rs  zola.rs
src-tauri/src/fonts/: mod.rs
src-tauri/src/images/: export.rs  mod.rs  (+2 more)
(+906 files in other folders)
